# fiddle

./: CMakeLists.txt  main.c  readme.md
data/shaders/glsl100/: lighting.vert
include/: common.h  ui.h
src/: main.c
